--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,13 +1,13 @@
 // sidebar
-$menuText:#bfcbd9;
+$menuText:#000;
 $menuActiveText:#409EFF;
 $subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
 
-$menuBg:#304156;
-$menuHover:#263445;
+$menuBg:#FFFFFF;
+$menuHover:#ed6e00;
 
-$subMenuBg:#1f2d3d;
-$subMenuHover:#001528;
+$subMenuBg:#FFFFFF;
+$subMenuHover:#ed6e00;
 
 $sideBarWidth: 210px;
 
