--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 // sidebar
 $menuText:#000;
 $menuActiveText:#409EFF;
-$subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
+$subMenuActiveText:#000; //https://github.com/ElemeFE/element/issues/12951
 
 $menuBg:#FFFFFF;
 $menuHover:#ed6e00;
