--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,7 @@
+$background-theme-red: red;
+$background-theme-blue: #652BF5;
+$background-theme-green: rgb(126, 185, 155);
+
 // sidebar
 $menuText:#000;
 $menuActiveText:#409EFF;
