分辨率适配

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,17 +1,13 @@
-$background-theme-red: red;
-$background-theme-blue: #652BF5;
-$background-theme-green: rgb(126, 185, 155);
-
 // sidebar
 $menuText:#000;
 $menuActiveText:#409EFF;
 $subMenuActiveText:#000; //https://github.com/ElemeFE/element/issues/12951
 
 $menuBg:#FFFFFF;
-$menuHover:#ed6e00;
+$menuHover:#093488;
 
 $subMenuBg:#FFFFFF;
-$subMenuHover:#ed6e00;
+$subMenuHover:#093488;
 
 $sideBarWidth: 210px;
 
