--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -5,6 +5,7 @@
     transition: margin-left .28s;
     margin-left: $sideBarWidth;
     position: relative;
+    background: #F2F2F2;
   }
 
   .sidebar-container {
@@ -69,6 +70,7 @@
     .el-submenu__title {
       &:hover {
         background-color: $menuHover !important;
+        color: #fff !important;
       }
     }
 
@@ -83,6 +85,7 @@
 
       &:hover {
         background-color: $subMenuHover !important;
+        color: #fff !important;
       }
     }
   }
@@ -186,6 +189,7 @@
     &:hover {
       // you can use $subMenuHover
       background-color: $menuHover !important;
+      color: #fff !important;
     }
   }
 
